# qtip

./: '  .coveragerc  .create_zones.py.swp  .gitignore  .gitreview  .qtip.cfg  0001-Apply-aarch64-to-Dockerfile.patch  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOP.md  Dockerfile  FUELCRED  INFO  INFO.yaml  Pipfile  QTIP.sh  README  README.md  abandon  clean.sh  dev-docker-compose.yaml  foo  foremancred  get_env_info.sh  launch_containers.sh  opnfv-creds.sh  qtip.py  requirements-frozen.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Test-cases/: SampleHeat.yaml
benchmarks/: average.sh  info_collect.py  ubench_transform.py
cli/: cli_entry.py  entry.py  helper.py  install.sh  setup.py
collector/: detail.json  result.json  timeline.json
config/: QtipKey  QtipKey.pub  SampleHeat.yaml  hosts
dashboard/: pushtoDB.py  qtip2dashboard.py
data/: fetch_compute_ips.sh  get_env_info.sh  hosts  my_key.pem  opnfv-creds.sh  pushtoDB.py  qtip_creds.sh  ssh_exch.exp
docker/: Dockerfile  Dockerfile.aarch64.patch  Dockerfile.local  README.md  cleanup_qtip_image.sh  packages.pip  push_db.sh  run_qtip.sh  supervisord.conf
docs/: Makefile  Pipfile  compute_testcases.rst  conf.py  conf.yaml  index.rst  iperf_testcase.rst  network_testcases.rst  roadmap.rst  sample_config.yaml  storage_testcases.rst
func/: .env_setup.py.swo  .env_setup.py.swp  ansible_api.py  args_handler.py  baremetal_setup.py  cli.py  copyfetchimg.py  create_zones.py  driver.py  env_setup.py  fetch_compute_ip.sh  fetch_compute_ips.sh  fetchimg.py  heatgen.py  (+5 more)
(+1163 files in other folders)
