[metadata]
name = qtip
summary = Platform Performance Benchmarking
description-file =
    README.md
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/qtip

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    qtip = qtip.cli.entry:cli
    # TODO(akhil) add qtip-api

[files]
packages =
    qtip
data_files =
    opt/qtip = opt/*

[tool:pytest]
addopts = --ignore=legacy
